--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "cleanup": "rm -r dist/*"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.52",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/node": "^7.0.0-beta.52",
-    "@babel/preset-env": "^7.0.0-beta.52",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.2.0",
     "eslint": "^5.16.0",
@@ -42,10 +42,10 @@
     "tape": "^4.6.2"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.52",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/node": "^7.0.0-beta.52",
-    "@babel/preset-env": "^7.0.0-beta.52",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@types/node": "^6.0.48",
     "babel-core": "^7.0.0-0",
     "binary-parser": "1.1.5",
