--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "advanced_knx",
   "version": "2.3.6",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "author": "Noname <knx_code@protonmail.com>",
   "private": false,
   "license": "MIT",
